# cnet

./: .gitignore  CMakeLists.txt  README.md  TODO  compile.sh  compile_commands.json  example.cpp  example_matrix.cpp
cnet/: CMakeLists.txt
cnet/include/cnet/: activation.hpp  backprop.hpp  layer.hpp  model.hpp  optimizer.hpp  weights.hpp
cnet/src/: CMakeLists.txt  activation.cpp  backprop.cpp  layer.cpp  loss.cpp  mat.cpp  model.cpp  variable.cpp  weights.cpp
cnet/tests/: CMakeLists.txt  run.sh  test_layer.cpp  test_mat.cpp  test_variable.cpp
cnet/utils/: CMakeLists.txt
cnet/utils/include/utils/: avx.hpp
cnet/utils/src/: CMakeLists.txt  raw_mat.cpp  strassen.cpp
designs/: .$class_model_design.drawio.bkp  .$conceptual_diagram.drawio.bkp  .$sematic_design.drawio.bkp  .$use_case.drawio.bkp  class_model_design.drawio  conceptual_diagram.drawio  sematic_design.drawio  use_case.drawio
examples/: CMakeLists.txt  bench_c.c  bench_my_lib.cpp  bench_python.py  c_xor_net.c  example_layer.cpp  example_var.cpp  keras_xor_example.py  python_xor_net.py
include/: CMakeLists.txt  cnet.h  cnet.hpp  mat.h
include/cnet/: afunc.hpp  afuncs.hpp  ann.hpp  cfuncs.hpp  cost.hpp  dtypes.hpp  layer.hpp  layers.hpp  mat.hpp  model.hpp  strassen.hpp  utils_avx.hpp  utils_mat.hpp
src/: CMakeLists.txt  activation.cpp  afunc.cpp  afuncs.cpp  ann.cpp  backprop.cpp  cfuncs.cpp  cnet.cpp  cost.cpp  layer.cpp  layers.cpp  mat.cpp  model.cpp  strassen.cpp  utils_mat.cpp  weights.cpp
src/include/cnet/: layers.hpp  loss.hpp  mat.hpp  model.hpp  variable.hpp
src/utils/: CMakeLists.txt  raw_mat.cpp  strassen.cpp
src/utils/include/: raw_mat.hpp  strassen.hpp
test/: CMakeLists.txt  test_afunc.cpp  test_afuncs.cpp  test_ann.cpp  test_layer.cpp  test_mat.cpp
tests/: CMakeLists.txt  test_activation.cpp  test_afunc.cpp  test_afuncs.cpp  test_ann.cpp  test_cfuncs.cpp  test_layer.cpp  test_loss.cpp  test_mat.cpp  test_model.cpp
